--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Super Titre</h1>
+    <h1>Super</h1>
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia aut, aliquam omnis voluptas quis accusantium delectus sit praesentium magnam nemo officiis nisi nulla a illum ad consequatur laboriosam tempore natus.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia aut, aliquam omnis voluptas quis accusantium delectus sit praesentium magnam nemo officiis nisi lalalo nulla a illum ad consequatur laboriosam tempore natus.
     </p>
 </body>
 </html>
